tests/baselines/reference/assignmentCompatWithStringIndexer3.errors.txt
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer3.ts(7,8): error TS2304: Cannot find name 'A'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer3.ts(20,9): error TS2322: Type '{ [x: string]: string; }' is not assignable to type 'A<T>'.
  Index signatures are incompatible.
    Type 'string' is not assignable to type 'T'.
      'T' could be instantiated with an arbitrary type which could be unrelated to 'string'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer3.ts(21,9): error TS2322: Type 'A<T>' is not assignable to type '{ [x: string]: string; }'.
  Index signatures are incompatible.
    Type 'T' is not assignable to type 'string'.
      Type 'Derived' is not assignable to type 'string'.


==== tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithStringIndexer3.ts (3 errors) ====
    // Derived type indexer must be subtype of base type indexer
    
    interface Base { foo: string; }
    interface Derived extends Base { bar: string; }
    interface Derived2 extends Derived { baz: string; }
    
    var a: A;
           ~
!!! error TS2304: Cannot find name 'A'.
    var b1: { [x: string]: string; }
    a = b1; // error
    b1 = a; // error
    
    module Generics {
        class A<T extends Derived> {
            [x: string]: T;
        }
       
        function foo<T extends Derived>() {
            var a: A<T>;
            var b: { [x: string]: string; }
            a = b; // error
            ~
!!! error TS2322: Type '{ [x: string]: string; }' is not assignable to type 'A<T>'.
!!! error TS2322:   Index signatures are incompatible.
!!! error TS2322:     Type 'string' is not assignable to type 'T'.
!!! error TS2322:       'T' could be instantiated with an arbitrary type which could be unrelated to 'string'.
            b = a; // error
            ~
!!! error TS2322: Type 'A<T>' is not assignable to type '{ [x: string]: string; }'.
!!! error TS2322:   Index signatures are incompatible.
!!! error TS2322:     Type 'T' is not assignable to type 'string'.
!!! error TS2322:       Type 'Derived' is not assignable to type 'string'.
        }
    }